--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>GER API!!</title>
+        <title>SUM</title>
         <!-- Google Font -->
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Gaegu&display=swap" rel="stylesheet">
@@ -9,26 +9,60 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     </head>
-    <body>
-        <style>
-            h1, h2, h3, h4, h5, h6, p, a, button, input, label {
-                font-family: 'Gaegu' !important;
-                }
-            </style>
-        <div>
+
+    <!-- CSS -->
+    <style>
+        /* Font Style */
+        h1, h2, h3, h4, h5, h6, p, a, button, input, label {font-family: 'Gaegu' !important;}
+
+        nav{font-size: 12pt; font-family: 'PT Sans', Arial, Sans-serif; position: relative;}
+        nav ul{padding: 0; margin: 0 auto; width: auto;}
+        nav li{}
+        nav a{line-height: 50px; height: 50px;}
+        nav li a{box-sizing: border-box; -moz-box-sizing: border-box; -webkit-box-sizing: border-box;}
+        nav li:last-child a{border-right: 0;}
+        nav a:hover, nav a:active{}
+        nav a#pull{display: none}
+          html {-webkit-touch-callout:none; -webkit-user-select:none; -webkit-tap-highlight-color:rgba(0, 0, 0, 0);}
+          ul{/*list-style-type: none; */margin: 0; padding: 0; background-color: #333; text-align: center;}
+          li{/*position: relative;*/display: inline-block;}
+          li a{color: #FFFFFF; text-align: right; padding: 14.5px 16px; text-decoration: none;}
+          li a:hover{/*color: #FFFFFF;*/ color: #FFFFFF; font-weight:normal;}
+          
+          .menu {width: 5000px; height: 50px; text-align: center; max-width: 100%; background-position: center; background-size: cover; background-color: #333333;color: white; position: absolute;z-index: 1;}
+        </style> 
+
+    <!-- Background color 지정-->
+    <body style="background-color: #FFC1CC;"> 
+
+        <!-- 상단바 설정 -->
+        <div class="menu" >
+            <nav class="clearfix">
+              <ul class="clearfix">
+                <li><a href="http://52.79.243.132:8000/">Home</a></li> 
+                <li><a>Codes</a></li>
+                <li><a>About</a></li>
+                <li><a>Contact</a></li>
+            </ul>
+            <a id="pull" href="#"></a>
+          </nav>
+          </div>
+
+        <!-- API 가져올 버튼  -->
+        <div style="text-align:center; padding: 150px;">
             <!-- Date -->
+            <p>미세먼지 농도를 알려줘!</p>
             <p> <label for="start">시작 날짜 :</label> <input type="date" id="start" name="trip-start" value="today"min="2015-01-01" max="2022-8-31"></p>
             <p>  <label for="end"> 마지막 날짜 :</label> <input type="date" id="end" name="trip-start" value="today"min="2015-01-01" max="2022-8-31"></p>
             <p><button onclick="get_msg()" class="btn btn-outline-secondary">미세먼지 농도</button></p>
             <p id="text"></p> <!-- id = 결과를 반환할 위치 -->
-        </div>
-        <div>
-            <script>
+        
+        <!-- API 가져올 script-->
+        <script>
                 function get_msg() {
-            
                     var request = new XMLHttpRequest(); // 객체 생성
                     request.open('GET', 'http://43.200.179.186/'); // 해당 주소에서 GET
-                    request.send(); // 보내줌,,
+                    request.send();
                     request.onload = function() { 
                         var response = request.response;
                         // alert("API 출동");
@@ -36,8 +70,8 @@
                         // document.getElementBy{" "} = id,class 사용 가능
                 }
             } 
-            </script>
-
+        </script>
+  
         </div>
     </body>
 </html>
