--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -39,8 +39,8 @@
         <div class="menu" >
             <nav class="clearfix">
               <ul class="clearfix">
-                <li><a href="http://52.79.243.132:8000/">Home</a></li> 
-                <li><a>Codes</a></li>
+                <li><a href={%url 'get_api'%}>Home</a></li> 
+                <li><a href = {%url 'get_code'%}>Codes</a></li>
                 <li><a>About</a></li>
                 <li><a>Contact</a></li>
             </ul>
