--- a/web/templates/codes.html
+++ b/web/templates/codes.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head><meta charset="utf-8" />
@@ -6,7 +7,7 @@
 <title>Example Code</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 
 
-
+<body style="background-color: #FFC1CC;"> 
 
 <style type="text/css">
     pre { line-height: 125%; }
@@ -18028,10 +18029,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </div>
 </body>
 
-
-
-
-
-
-
+</html>
+</body>
+    </body>
 </html>
