--- a/web/templates/codes.html
+++ b/web/templates/codes.html
@@ -7,7 +7,7 @@
 <title>Example Code</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 
 
-<body style="background-color: #FFC1CC;"> 
+<body style="background-color: #FFD1DC;"> 
 
 <style type="text/css">
     pre { line-height: 125%; }
