--- a/web/templates/contact.html
+++ b/web/templates/contact.html
@@ -1,39 +1,71 @@
+{%load static%}
 <html>
     <head>
         <title>SUM</title>
         <!-- Google Font -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Gaegu&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Poor+Story&display=swap" rel="stylesheet">
        <!-- Bootstrap -->
         <meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+		    <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     </head>
 
     <!-- CSS -->
     <style>
         /* Font Style */
-        h1, h2, h3, h4, h5, h6, p, a, button, input, label, textarea {font-family: 'Gaegu' !important; font-size : 15pt}
+        h1, h2, h3, h4, h5, h6, p, a, button, input, label, textarea {font-family: 'Poor Story' !important; font-size : 14pt}
 
-        nav{font-size: 20pt; position: relative; margin-bottom : 100px;}
-        nav ul{padding: 0; margin: 0 auto ; width: auto;}
-        nav li{}
+        nav{font-size: 15pt; position: relative; margin-bottom : 100px;}
+        nav ul{position: fixed; top: 0; /* width: 100% */ left: 0; right: 0;padding: 0; margin: 0 auto ; width: auto;}
+        nav li{padding : 5;}
         nav a{line-height: 50px; height: 50px;}
         nav li a{box-sizing: border-box; -moz-box-sizing: border-box; -webkit-box-sizing: border-box;}
         nav li:last-child a{border-right: 0;}
-        nav a:hover, nav a:active{}
+        nav a:hover, nav a:active{color:#FFFFFF; border-bottom:2px solid white;}
         nav a#pull{display: none}
+        h2#our {padding-top : 30px;}
           html {-webkit-touch-callout:none; -webkit-user-select:none; -webkit-tap-highlight-color:rgba(0, 0, 0, 0);}
           ul{/*list-style-type: none; */margin: 0; padding: 0; background-color: #333; text-align: center;}
           li{/*position: relative;*/display: inline-block;}
           li a{color: #FFFFFF; text-align: right; padding: 14.5px 16px; text-decoration: none;}
           li a:hover{/*color: #FFFFFF;*/ color: #FFFFFF; font-weight:normal;}
-          div#mb{padding-top: 100px;}
+          div#mb{padding-top: 00px;}
           .menu {width: 5000px; height: 50px; text-align: center; max-width: 100%; background-position: center; background-size: cover; background-color: #333333;color: white; position: absolute;z-index: 1;}
         </style> 
 
+        <!-- About us-->
+        <style>
+          
+          html {box-sizing: border-box;}
+          
+          *, *:before, *:after {box-sizing: inherit;}
+          
+          .column {float: left; width: 50%; margin-bottom: 10px; padding: 30px;}
+          
+          .card {box-shadow: 0 7px 10px 0 rgba(0, 0, 0, 0.2); margin: 10px;}
+          
+          .about-section {padding: 10px; text-align: center; background-color: #; color: white;}
+          
+          .container {padding: 10px;}
+          
+          .container::after, .row::after {content: ""; clear: both; display: table;}
+          
+          .title {color: grey;}
+
+          .button:hover {background-color: #555;}
+          
+          @media screen and (max-width: 150px) {
+            .column {
+              width: 1000%;
+              display: block;
+            }
+          }
+          </style>
+
     <!-- Background color 지정-->
-    <body style="background-color: #FFC1CC;"> 
+    <body style="background-color: #FFD1DC;"> 
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
         
 		<!-- 상단바 설정 -->
@@ -42,38 +74,77 @@
               <ul class="clearfix">
                 <li><a href={%url 'get_api'%}>Home</a></li> 
                 <li><a href = {%url 'get_code'%}>Codes</a></li>
-                <li><a>About</a></li>
-                <li><a href = {%url 'get_contact'%}>Contact</a></li>
+                <li><a>Report</a></li>
+                <li><a href = {%url 'get_contact'%}>Appendix</a></li>
             </ul>
             <a id="pull" href="#"></a>
           	</nav>
           </div>
+
+        <!-- About us -->
+          <h2 id = "our"style="text-align:center"><br></h2>
+          <h2 id = "our"style="text-align:center">Our Team</h2>
+          
+      
+          <div class="row">
+            <div class="column">
+              <div class="card">
+                <img src="{% static 'seoyoon.jpeg'%}" alt="joanne" style="width:100%">
+                <div class="container">
+                  <h2>♚ Joanne Chang(Chang Seoyoon)</h2>
+                  <p class="title">Team Leader & Data Scientist </p>
+                  <p>Role : 데이터 수집, 데이터 분석, Documentation</p>
+                  <P>Skill : Python </p>
+                  <p>joannechang980329@gmail.com</p>
+                  <a href = "mailto:joannechang980329@gmail.com"><button class="btn btn-outline-secondary">Contact</button></a>
+                </div>
+              </div>
+            </div>
+          
+            <div class="column">
+              <div class="card">
+                <img src="{% static 'bella.jpeg'%}" alt="Bella" style="width:100%">
+                <div class="container">
+                  <h2>Bella Jeong (Jeong Yi Seul)</h2>
+                  <p class="title">Backend Developer</p>
+                  <p>백엔드</p>
+                  <p>Skills : Python, Django, FastAPI, MySQL</p>
+                  <p>yiseuljeong0415@gmail.com</p>
+                  <a href = "mailto:yiseuljeong0415@gmail.com"><button class="btn btn-outline-secondary">Contact</button></a>
+                </div>
+              </div>
+            </div>
+            
+            <div class="column">
+              <div class="card">
+                <img src="{% static 'yeob.jpg'%}" alt="json" style="width:100%">
+                <div class="container">
+                  <h2>Json Kim(Kim Jong Yeob)</h2>
+                  <p class="title">Sexy Data Engineer</p>
+                  <p>Role : 데이터 수집, 데이터 전처리, Machine Learning</p>
+                  <p>Skill : Python </p>
+                  <p>zxch34@gmail.com</p>
+                  <a href = "mailto:zxch34@gmail.com"><button class="btn btn-outline-secondary">Contact</button></a>
+                </div>
+              </div>
+            </div>
+          
+            <div class="column">
+              <div class="card">
+                <img src="{% static 'ju.jpg'%}" alt="victor" style="width:100%">
+                <div class="container">
+                  <h2>Victor Kim(Kim Seung Ju)</h2>
+                  <p class="title">Hot Data Engineer</p>
+                  <p>Role : 데이터 수집, 데이터 전처리, Deep Learning</p>
+                  <p>Skill : Python </p>
+                  <p>zmffotm57@gmail.com</p>
+                  <a href = "mailto:zmffotm57@gmail.com" ><button class="btn btn-outline-secondary">Contact</button></a>
+                </div>
+              </div>
+            </div>
+          
 		  
-		  <!-- email 보내기-->
-		  <script> 
-			function sendEmail() {
-				var title = document.getElementById("exampleFormControlInput1").value
-				var description = document.getElementById("exampleFormControlTextarea1").value
-				var mail_to = "mailto:yiseuljeong0415@gmail.com?subject=", + title + '&body=' + description;
-				window.open(mail_to);
-			}
-		  </script>
-		  <div class = "container", id = "mb">
-			<div class="mb-3">
-				<label for="exampleFormControlInput1" class="form-label">Title</label>
-				<input class="form-control" id="exampleFormControlInput1" placeholder="Input title">
-			  </div>
-	
-			  <div class="mb-3">
-				<label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
-				<textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Input Something..."></textarea>
-			  </div>
-			  <div class = "d-grid gap-2">
-			  <button  class="btn btn-outline-secondary" type = "button", onclick = "sendEmail()">Send</button>
-			  </div>
-	
-		  </div>
-		
+ 
 
   
         
