--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -2,8 +2,9 @@
     <head>
         <title>SUM</title>
         <!-- Google Font -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Gaegu&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Poor+Story&display=swap" rel="stylesheet">
        <!-- Bootstrap -->
         <meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,15 +15,16 @@
     <!-- CSS -->
     <style>
         /* Font Style */
-        h1, h2, h3, h4, h5, h6, p, a, button, input, label {font-family: 'Gaegu' !important; font-size : 15pt}
+        h1, h2, h3, h4, h5, h6, p, a, button, input, label, swal{font-family: 'Poor Story' !important; font-size : 14pt}
 
-        nav{font-size: 20pt; position: relative; margin-bottom : 100px}
-        nav ul{padding: 0; margin: 0 auto; width: auto;}
-        nav li{}
+        nav {position: fixed; top: 0; /* width: 100% */ left: 0; right: 0;}
+        nav{font-size: 15pt; position: relative; margin-bottom : 100px}
+        nav ul{position: fixed; top: 0; /* width: 100% */ left: 0; right: 0;padding: 0; margin: 0 auto ; width: auto;}
+        nav li{padding : 5;}
         nav a{line-height: 50px; height: 50px;}
         nav li a{box-sizing: border-box; -moz-box-sizing: border-box; -webkit-box-sizing: border-box;}
         nav li:last-child a{border-right: 0;}
-        nav a:hover, nav a:active{}
+        nav a:hover, nav a:active{ color:#FFFFFF; border-bottom:2px solid white;}
         nav a#pull{display: none}
           html {-webkit-touch-callout:none; -webkit-user-select:none; -webkit-tap-highlight-color:rgba(0, 0, 0, 0);}
           ul{/*list-style-type: none; */margin: 0; padding: 0; background-color: #333; text-align: center;}
@@ -31,47 +33,64 @@
           li a:hover{/*color: #FFFFFF;*/ color: #FFFFFF; font-weight:normal;}
           
           .menu {width: 5000px; height: 50px; text-align: center; max-width: 100%; background-position: center; background-size: cover; background-color: #333333;color: white; position: absolute;z-index: 1;}
+          .swal-button{background-color: #FFB2D9; font-size: 12px;text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.3)}
         </style> 
-
     <!-- Background color 지정-->
-    <body style="background-color: #FFC1CC;"> 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <body style="background-color: #FFD1DC;"> 
+        
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.10/dist/sweetalert2.min.css">
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.10/dist/sweetalert2.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
         <!-- 상단바 설정 -->
         <div class="menu" >
             <nav class="clearfix">
               <ul class="clearfix">
                 <li><a href={%url 'get_api'%}>Home</a></li> 
                 <li><a href = {%url 'get_code'%}>Codes</a></li>
-                <li><a>About</a></li>
-                <li><a href = {%url 'get_contact'%}>Contact</a></li>
+                <li><a>Report</a></li>
+                <li><a href = {%url 'get_contact'%}>Appendix</a></li>
             </ul>
             <a id="pull" href="#"></a>
           </nav>
           </div>
 
         <!-- API 가져올 버튼  -->
-        <div style="text-align:center; padding: 150px;">
+        <div style="text-align:center; padding: 250px;">
             <!-- Date -->
-            <p>미세먼지 농도를 알려줘!</p>
-            <p> <label for="start">시작 날짜 :</label> <input type="date" id="start" name="trip-start" value="today"min="2015-01-01" max="2022-8-31"></p>
-            <p> <label for="end"> 마지막 날짜 :</label> <input type="date" id="end" name="trip-start" value="today"min="2015-01-01" max="2022-8-31"></p>
-            <p><button onclick="get_msg()" class="btn btn-outline-secondary">미세먼지 농도</button></p>
+            <p>내일 서울시 미세먼지 농도를 알려줘!</p>
+            <p> <label for="start">Select Time :</label> <input type="time" id="start" ></p>
+            <p> <button onclick="get_msg()" class="btn btn-outline-secondary" style = "background:#333; color:#FFFFFF;">미세먼지 농도</button> </p>
             <p id="text"></p> <!-- id = 결과를 반환할 위치 -->
         
         <!-- API 가져올 script-->
         <script>
                 function get_msg() {
+                    const timeinput = document.getElementById("start");
+                    console.log(timeinput.value);
+                    if (timeinput.value == 0){
+                        Swal.fire(
+                            'Error!',
+                            '시간을 입력해주세요',
+                            'error'
+                          );
+
+                        return ;
+                    }
+                        
+                    
                     var request = new XMLHttpRequest(); // 객체 생성
                     request.open('GET', 'http://43.200.179.186/'); // 해당 주소에서 GET
                     request.send();
                     request.onload = function() { 
                         var response = request.response;
+                        // var response = Object.values(response); // value만 추출
                         // alert("API 출동");
                         document.getElementById("text").innerHTML = response; 
                         // document.getElementBy{" "} = id,class 사용 가능
                 }
             } 
         </script>
+        
   
         </div>
     </body>
