--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -46,7 +46,8 @@
             <nav class="clearfix">
               <ul class="clearfix">
                 <li><a href={%url 'get_api'%}>Home</a></li> 
-                <li><a href = {%url 'get_code'%}>Codes</a></li>
+                <li><a href = {%url 'get_deeplearning_code'%}>Deep Learning</a></li>
+                <li><a href = {%url 'get_machinelearning_code'%} >Machine Learning</a></li>
                 <li><a>Report</a></li>
                 <li><a href = {%url 'get_contact'%}>Appendix</a></li>
             </ul>
