--- a/web/templates/machine_learning_code.html
+++ b/web/templates/machine_learning_code.html
@@ -48,7 +48,7 @@
                 <li><a href={%url 'get_api'%}>Home</a></li> 
                 <li><a href = {%url 'get_deeplearning_code'%}>Deep Learning</a></li>
                 <li><a href = {%url 'get_machinelearning_code'%} >Machine Learning</a></li>
-                <li><a>Report</a></li>
+                <li><a href = {%url 'show_report'%} >Visualization</a></li>
                 <li><a href = {%url 'get_contact'%}>Appendix</a></li>
             </ul>
             <a id="pull" href="#"></a>
@@ -14331,12 +14331,12 @@ a.anchor-link {
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <h1 id="&#49436;&#50872;&#49884;-&#51333;&#47196;&#44396;-&#51061;&#51068;-&#48120;&#49464;&#47676;&#51648;-&#45453;&#46020;-&#50696;&#52769;-&#47784;&#45944;">&#49436;&#50872;&#49884; &#51333;&#47196;&#44396; &#51061;&#51068; &#48120;&#49464;&#47676;&#51648; &#45453;&#46020; &#50696;&#52769; &#47784;&#45944;<a class="anchor-link" href="#&#49436;&#50872;&#49884;-&#51333;&#47196;&#44396;-&#51061;&#51068;-&#48120;&#49464;&#47676;&#51648;-&#45453;&#46020;-&#50696;&#52769;-&#47784;&#45944;">&#182;</a></h1>
-<div>
+<div style="text-align:center; margin-top : 27px" >
 <p>머신러닝 분류모델</p>
 <p>➭ 데이터 : 서울, 경기, 인천 대기오염도(한국환경공단), 서울, 경기, 인천 종관기상관측(기상청)</p>
-<p>➭ 독립변수 :<br>
-     - 수도권 118개 측정소의 PM10(미세먼지), O3(오존), NO2(이산화질소), CO(일산화탄소), SO2(아황산가스)<br>
-     - 수도권 9개 관측소의 기온, 강수량, 풍속, 풍향, 습도, 증기압, 이슬점온도, 현지기압, 해면기압, 일조, 일사, 적설, 3시간신적설, 전운량, 중하층운량, 운형, 최저운고, 시정, 지면상태, 현상번호, 지면온도, 지중온도 </p>
+<p>➭ 독립변수 :
+<p>- 수도권 118개 측정소의 PM10(미세먼지), O3(오존), NO2(이산화질소), CO(일산화탄소), SO2(아황산가스)</p>
+<p>- 수도권 9개 관측소의 기온, 강수량, 풍속, 풍향, 습도, 증기압, 이슬점온도, 현지기압, 해면기압, 일조, 일사, 적설, 3시간신적설, 전운량, 중하층운량, 운형, 최저운고, 시정, 지면상태, 현상번호, 지면온도, 지중온도 </p>
 <p>➭ 종속변수 : 익일 미세먼지 농도(기준에 따라 '0 : 매우 좋음, 1 : 좋음, 2 : 나쁨, 3 : 매우 나쁨'으로 비닝)</p>
 </div>
 
