--- a/web/templates/contact.html
+++ b/web/templates/contact.html
@@ -72,11 +72,11 @@
         <div class="menu" >
           <nav class="clearfix">
             <ul class="clearfix">
-              <li ><a href={%url 'get_api'%}>Home</a></li> 
-              <li ><a href = {%url 'get_deeplearning_code'%}>Deep Learning</a></li>
-              <li ><a href = {%url 'get_machinelearning_code'%} >Machine Learning</a></li>
-              <li ><a>Report</a></li>
-              <li ><a href = {%url 'get_contact'%}>Appendix</a></li>
+              <li><a href={%url 'get_api'%}>Home</a></li> 
+              <li><a href = {%url 'get_deeplearning_code'%}>Deep Learning</a></li>
+              <li><a href = {%url 'get_machinelearning_code'%} >Machine Learning</a></li>
+              <li><a href = {%url 'show_report'%} >Visualization</a></li>
+              <li><a href = {%url 'get_contact'%}>Appendix</a></li>
           </ul>
           <a id="pull" href="#"></a>
         </nav>
